--- a/index.css
+++ b/index.css
@@ -1,13 +1,16 @@
 :root {
-  --font-lato: "Lato";
-  --font-opensans: "Open Sans";
-  --font-poppins: "Poppins";
+  --font-lato: "Lato", sans-serif;
+  --font-opensans: "Open Sans", sans-serif;
+  --font-poppins: "Poppins", sans-serif;
+  --font-roboto: "Roboto", sans-serif;
   --color-white: #ffffff;
   --color-bluelight: #789dd8;
   --color-blue: #1074d8;
   --color-black: #333333;
   --color-grey: #e3e3e5;
   --color-greylight: #ffffff66;
+  --color-greyblue: #dfe3ed;
+  --color-greydark: #999999;
   --radius-sm: 8px;
   --radius-md: 10px;
   --radius-lg: 15px;
@@ -107,10 +110,10 @@ button {
 
 /*  */
 body {
+  color: var(--color-black);
   background-image: url("./images/backgrounds/main.svg");
   background-repeat: no-repeat;
-  color: var(--color-black);
-  /* background-size: 100% auto; */
+  background-size: auto;
   /*  */
   /*  */
   /*  */
@@ -367,11 +370,12 @@ body .join-us .jobs div {
   border-radius: var(--radius-sm);
 }
 body footer {
+  min-height: 764px;
   margin-top: 42px;
   background-image: url("./images/backgrounds/footer.svg");
   background-repeat: no-repeat;
   display: flex;
-  align-items: center;
+  align-items: end;
   color: var(--color-white);
 }
 body footer .container .content {
@@ -384,7 +388,48 @@ body footer .container .content {
 body footer .container .content img {
   max-width: 463px;
 }
-body footer .container .subcontent {
-  margin-top: 64px;
+body footer .container .content .right-column .subtitle {
+  color: var(--color-white);
+}
+body footer .container .content .right-column h3 {
+  margin-top: 10px;
+}
+body footer .container .content .right-column form {
+  margin-top: 56px;
+}
+body footer .container .content .right-column form input {
+  width: 100%;
+  max-width: 270px;
+  display: block;
+  border: 1px solid var(--color-greyblue);
+  font-family: var(--font-roboto);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 36px;
+  padding: 5px 10px;
+  margin-top: 25px;
+}
+body footer .container .content .right-column form input::-moz-placeholder {
+  color: var(--color-greydark);
+}
+body footer .container .content .right-column form input::placeholder {
+  color: var(--color-greydark);
+}
+body footer .container .content .right-column form button {
+  margin-top: 25px;
+  background: var(--color-blue);
+  padding: 15px 40px;
+  text-transform: inherit;
+  font-family: var(--font-opensans);
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 15px;
   text-align: center;
+}
+body footer .container .subcontent {
+  font-family: var(--font-opensans);
+  margin-top: 40px;
+  text-align: center;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }/*# sourceMappingURL=index.css.map */
