--- a/index.scss
+++ b/index.scss
@@ -120,7 +120,9 @@ body {
 
     background-image: url("./images/backgrounds/main.svg");
     background-repeat: no-repeat;
-    background-size: auto;
+    /* background-size: 100vw 746px; */
+    /* background-size: 100vw 740px;
+    background-position: top left; */
 
     /*  */
 
