--- a/index.css
+++ b/index.css
@@ -111,11 +111,9 @@ button {
 /*  */
 body {
   color: var(--color-black);
-  background-image: url("./images/backgrounds/main.svg");
+  background-image: url("./images/backgrounds/main.png");
   background-repeat: no-repeat;
-  /* background-size: 100vw 746px; */
-  /* background-size: 100vw 740px;
-  background-position: top left; */
+  background-size: 100vw 740px;
   /*  */
   /*  */
   /*  */
@@ -227,8 +225,9 @@ body .services article p {
 body .about {
   min-height: 892.5px;
   margin-top: 24px;
-  background-image: url("./images/backgrounds/about.svg");
+  background-image: url("./images/backgrounds/about.png");
   background-repeat: no-repeat;
+  background-size: 100vw 100%;
   display: flex;
   align-items: center;
 }
@@ -318,7 +317,8 @@ body .why-we img {
 body .time-in-it {
   min-height: 605px;
   margin-top: 124px;
-  background-image: url("./images/backgrounds/time-in-it.svg");
+  background-image: url("./images/backgrounds/time-in-it.png");
+  background-size: 100vw 100%;
   background-repeat: no-repeat;
   display: flex;
   align-items: center;
@@ -374,7 +374,8 @@ body .join-us .jobs div {
 body footer {
   min-height: 764px;
   margin-top: 42px;
-  background-image: url("./images/backgrounds/footer.svg");
+  background-image: url("./images/backgrounds/footer.png");
+  background-size: 100vw 100%;
   background-repeat: no-repeat;
   display: flex;
   align-items: end;
@@ -416,6 +417,9 @@ body footer .container .content .right-column form input::-moz-placeholder {
 }
 body footer .container .content .right-column form input::placeholder {
   color: var(--color-greydark);
+}
+body footer .container .content .right-column form .g-recaptcha {
+  margin-top: 25px;
 }
 body footer .container .content .right-column form button {
   margin-top: 25px;
